<resources>
    <string name="app_name">Noticeboard</string>
    <string name="email_address"> Email</string>
    <string name="password"> Password</string>
    <string name="updatepassword">Update Password</string>
    <string name="cpassword"> Confirm Password</string>
    <string name="signup_link">New User? Sign Up</string>
    <string name="login_button">Login</string>
    <string name="fullnames">Full Names</string>
    <string name="regno">Registration Number</string>
    <string name="phonenumber">Phone Number</string>
    <string name="signup_button">SignUp</string>
    <string name="login_link">Already Have an Account? Login</string>
    <string name="signupextension">Please fill in the details below</string>
    <string name="submitsuignup">Submit</string>
    <string name="title_activity_bottomnavigation">bottomnavigation</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="photo">Upload Photo</string>
    <string name="phoneprefix">+254</string>
    <string name="forgotpwd">Forgot Password?</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="resetintro">Forgot your password?</string>
    <string name="resetemail">Enter your email and we will help you to reset your password</string>
    <string name="resetinstruction">We will email you with password reset instructions.</string>
    <string name="resetbutton">Reset Password</string>
    <string name="next">Next</string>
    <string name="thanks">Thank You</string>
    <string name="signout">SignOut</string>
    <string name="pagename">Page Name</string>
    <string name="bio">Bio (Page Description)</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="newpage">Create Page</string>
    <string name="settings">Settings</string>
    <string name="insearchpage">Look for a page here</string>
    <string name="Welcome">You will get notices as soon as you follow a page.</string>
    <string name="homefollowpage">Follow Page</string>
    <string name="createpagelink">Create Page</string>
    <string name="minimum_password">Password too short. Enterminimum 6 characters</string>
    <string name="auth_failed">Authentication Failed, check your email and password</string>
    <string name="following">Following</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search Page</string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Help &amp; FAQs</string>
    <string name="menu_help">Help</string>
    <string name="home_second">Home Second</string>
    <string name="logout">LogOut</string>
    <string name="logout_popup">Are you sure you want to Logout?</string>
    <string name="create_page">Create Page</string>
    <string name="pages">Pages</string>

    <string name="post_title">Post Title</string>
    <string name="post">What is the announcement?</string>
    <string name="posts">Posts</string>
    <string name="create">Create</string>
    <string name="title_activity_user_profile_page">UserProfilePage</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="add">Add</string>
    <string name="cancel">No, Thank You</string>
    <string name="add_profile_pic">Add Profile Picture</string>
    <string name="desription">You can add a picture or could skip this step.</string>
    <string name="create_page_text">Please fill in the Information below</string>
    <string name="savedpost">Saved Post</string>
    <string name="edit_page">Edit Page</string>
    <string name="edit">Edit</string>

    <string name="deletePage">Are you sure you want to delete this page? \n\nAll your posts will be deleted. Your Associators and Followers will be automatically removed. \n\n Do you wish to continue?</string>
    <string name="leavesignup">You have not completed signing up. \nIf you leave now, you\'ll have to sign up again next time. \n\n Do you wish to continue?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduction">Noticeboard helps you to keep yourself updated with posts and news that you may have missed on your physical Noticeboard. Below is a guide of how to use the application to follow pages, create pages and posting content for your followers.</string>
    <string name="createpage">Create a page here and start to post to your followers.</string>
    <string name="followpage">Follow pages from here and get instant news.</string>
    <string name="associatorunfollowwarning">"You'll stop being an associator if you unfollow. \n\nDo you wish to continue?"</string>
    <string name="associator">For Admins, you can have Associators who’ll help you with your posting in case of your Absence. </string>

</resources>
