<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


        <item android:title="Communication">

                <menu>
                        <item
                            android:id="@+id/nav_home"
                            android:icon="@drawable/ic_library_books_black_24dp"
                            android:title="@string/posts"
                            />

                        <item
                            android:id="@+id/nav_pages"
                            android:icon="@drawable/baseline_pages_black_18dp"
                            android:title="@string/pages" />

                        <item
                            android:id="@+id/nav_savedpost"
                            android:icon="@drawable/ic_bookmark_black_24dp"
                            android:title="@string/savedpost" />
                </menu>


        </item>

        <item android:title="Account">
                <menu>
                        <item
                            android:id="@+id/nav_settings"
                            android:icon="@drawable/ic_settings_black_24dp"
                            android:title="@string/menu_settings"
                            />
                </menu>
        </item>


</menu>
