<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword">


    <TextView
        android:id="@+id/resetintro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/resetintro"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/resetguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/resetintro"
        android:text="@string/resetemail"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/thankyouNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/resetguideline"
        android:text="@string/resetinstruction"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/resetEmailTIL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_below="@id/thankyouNote"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">

    <EditText

        android:id="@+id/resetemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/thankyouNote"
        android:layout_centerHorizontal="true"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/resetbutton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/resetbutton"
        android:layout_below="@+id/resetEmailTIL"
        android:layout_centerHorizontal="true"
        android:background="@drawable/roundedshapebtn"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>