<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="Welcome to Noticeboard"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_margin="@dimen/dimen_20dp"
        android:text="@string/introduction"
        android:textColor="@color/color_title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/createpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/introduction"
        android:layout_marginStart="20dp"
        android:text="@string/createpage"
        android:textColor="@color/color_title"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/followpage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createpage"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/followpage"
        android:textColor="@color/color_title"
        android:textSize="16sp" />


    <RelativeLayout
        android:id="@+id/relativelayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#F1F1F1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="Noticeboard for Android \u00a9 2020  "
            android:textColor="@color/color_title"
            android:textSize="12sp" />

    </RelativeLayout>


</RelativeLayout>