<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddUserProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/updateprofileheading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:text="@string/add_profile_pic"
                android:textStyle="bold"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/desription"
                android:layout_below="@+id/updateprofileheading"/>
            <ImageView
                android:id="@+id/userprofileimg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_person_black_24dp"
                android:layout_marginTop="50dp"
                android:layout_below="@id/description"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/ic_photo_camera_black_100dp"
                android:layout_alignBottom="@+id/userprofileimg"
                android:layout_alignRight="@+id/userprofileimg"/>

            <Button
                android:id="@+id/skipbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_below="@+id/userprofileimg"
                android:layout_marginTop="100dp"
                android:layout_marginLeft="20dp"/>
            <Button
                android:id="@+id/addbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textStyle="bold"
                android:layout_below="@+id/userprofileimg"
                android:layout_alignParentRight="true"
                android:layout_marginTop="100dp"
                android:layout_marginRight="20dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="52dp"
                android:layout_height="44dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>