<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createpagetitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Create Page"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/createpagetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/createpagetitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/create_page_text"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/color_title"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pagenameTIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/createpagetext"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_40dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/pagename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createpagetext"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:ems="15"
                    android:hint="@string/pagename" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bioTIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pagenameTIL"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dimen_40dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/bioinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pagename"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80dp"
                    android:ems="15"
                    android:hint="@string/bio"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/pageprivacydescrption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Please select preferred page privacy"
                android:layout_marginStart="50dp"
                android:layout_below="@id/bioTIL"
                android:textSize="16sp"
                android:textColor="@color/color_title"
                android:layout_marginTop="50dp"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_below="@+id/pageprivacydescrption"
               android:layout_marginStart="50dp"
                android:layout_marginTop="@dimen/dimen_20dp" />

        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>